<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/home_selector"
        android:title="@string/home"/>

    <item
        android:id="@+id/informasi"
        android:icon="@drawable/ic_informasi"
        android:title="@string/informasi"/>

    <item
        android:id="@+id/placeholder"
        android:title=" "
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/bantuan"
        android:icon="@drawable/ic_question"
        android:title="@string/bantuan"/>

    <item
        android:id="@+id/akun"
        android:icon="@drawable/ic_profile"
        android:title="@string/akun"/>

</menu>