<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_deskripsi"
    android:layout_marginHorizontal="30dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pengaturanLanjutan"
            android:text="Pengaturan Lanjutan"
            android:layout_gravity="center"
            style="@style/Heading3"
            android:layout_marginTop="20dp"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Inference time row -->
        <View
            android:id="@+id/divider"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/see_listen_neutral1" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/inference_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppinslight"
                android:text="@string/label_inference_time"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/inference_time_val"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/poppinslight"
                android:gravity="end"
                android:text="0ms"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- ML confidence threshold adjustment row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_hand_detection_confidence_threshold"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinslight"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/detection_threshold_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:src="@drawable/ic_minus"
                    android:background="@color/see_listen_transparent"/>

                <TextView
                    android:id="@+id/detection_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppinslight"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/detection_threshold_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:src="@drawable/ic_plus"
                    android:background="@color/see_listen_transparent"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_hand_tracking_confidence_threshold"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinslight"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/tracking_threshold_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:src="@drawable/ic_minus"
                    android:background="@color/see_listen_transparent"/>

                <TextView
                    android:id="@+id/tracking_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppinslight"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/tracking_threshold_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:src="@drawable/ic_plus"
                    android:background="@color/see_listen_transparent"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_hand_presence_confidence_threshold"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinslight"
                android:textSize="12sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/presence_threshold_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:src="@drawable/ic_minus"
                    android:background="@color/see_listen_transparent"/>

                <TextView
                    android:id="@+id/presence_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppinslight"
                    android:textSize="14sp"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/presence_threshold_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:src="@drawable/ic_plus"
                    android:background="@color/see_listen_transparent"/>
            </LinearLayout>

        </RelativeLayout>

        <!-- Delegate selection row -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppinslight"
                android:text="@string/label_delegate"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_delegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:entries="@array/delegate_spinner_titles"
                android:minWidth="@dimen/bottom_sheet_spinner_delegate_min_width"
                android:spinnerMode="dropdown"
                android:theme="@style/BottomSheetSpinnerItemStyle" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/applyContainer"
            android:layout_below="@id/radioContainer"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/terapkanSettingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_deskripsi"
                android:fontFamily="@font/poppinssemibold"
                android:paddingHorizontal="20dp"
                android:text="Terapkan"
                android:minHeight="37dp"
                android:textAllCaps="false"
                android:textSize="12sp"
                app:icon="@drawable/ic_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/batalSettingBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/batalSettingBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/outlined_rectangle"
                android:text="Batal"
                android:minHeight="37dp"
                android:paddingHorizontal="20dp"
                android:textColor="@color/see_listen_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>